fix(text-field): border bottom dark mode

--- a/packages/core/src/components/text-field/text-field-vars.scss
+++ b/packages/core/src/components/text-field/text-field-vars.scss
@@ -117,6 +117,7 @@
   --tds-text-field-border-bottom-hover: var(--tds-grey-400);
   --tds-text-field-border-bottom-success: var(--tds-grey-50);
   --tds-text-field-border-bottom-error: var(--tds-negative);
+  --tds-text-field-border-bottom-readonly: var(--tds-grey-600);
 
   // Read only
   --tds-text-field-icon-read-only-color: var(--tds-grey-100);
